--- a/certifications.tex
+++ b/certifications.tex
@@ -1,4 +1,21 @@
-\begin{itemize}
-    \item Confluent Certified Developer for Apatche Kafka (Expected Nov 2025)
-    \item AWS Certified Data Engineer – Associate (Planned Dec 2025)
+\begin{itemize}[leftmargin=*]
+    \item \textbf{Confluent Kafka} \hfill Nov 2025
+    \begin{itemize}[leftmargin=1.5em]
+        \item Confluent Certified Developer for Apache Kafka \(CCDAK\)
+    \end{itemize}
+    \item \textbf{AWS}
+    \begin{itemize}[leftmargin=1.5em]
+        % \item Solution Architect Associate -- On Going \hfill July 2025
+        \item Data Engineering Associate -- On Going \hfill Oct 2025
+    \end{itemize}
+    \item \textbf{Oracle - Certified:} \hfill May 2023 -- Aug 2023
+    \begin{itemize}[leftmargin=1.5em]
+        \item Oracle Cloud Infrastructure 2023 Certified Enterprise Analytics Professional.
+    \end{itemize}
+    \item \textbf{Incorta Training - Certified:} \hfill Jun 2023 -- May 2023
+    \begin{itemize}[leftmargin=1.5em]
+        \item Incorta 5 Foundations for Business Analysts.
+        \item Incorta 5 Foundations for Developers.
+        \item Incorta 5 Foundations for Administrator
+    \end{itemize}
 \end{itemize}
