--- a/skills.tex
+++ b/skills.tex
@@ -1,7 +1,53 @@
 \begin{itemize}
-    \item \textbf{Languages:} Python, SQL, Java
+    \item \textbf{Languages:} Python, SQL, Java, PL/SQL
     \item \textbf{Big Data:} Apache Kafka, Spark, Hadoop
-    \item \textbf{Cloud:} AWS (S3, Redshift, EMR, Lambda)
-    \item \textbf{Tools:} Git, Docker, Airflow, dbt, Informaitca PowerCenter, Informatica DEI, ERwin
-    \item \textbf{Other:} Data Modeling, ETL, CI/CD
+    \item \textbf{Cloud:}
+    \begin{itemize}
+        \item \textbf{AWS:}
+        \begin{itemize}
+            \item S3
+            \item EC2
+            \item EMR
+            \item Glue
+            \item Lambda
+        \end{itemize}
+        \item Familiarity with GCP and Azure
+    \end{itemize}
+    \item \textbf{ETL and Data Integration:}
+    \begin{itemize}
+        \item Informatica PowerCenter Designer and OFSAA Tool (T2T, SCD)
+        \item Informatica Developer Tool
+    \end{itemize}
+    \item \textbf{Task Scheduling Tools:}
+    \begin{itemize}
+        \item Informatica PowerCenter Workflow
+        \item Apache Airflow
+    \end{itemize}
+    \item \textbf{BI and Reporting:}
+    \begin{itemize}
+        \item Oracle Tools: OBIEE, Oracle BI Publisher, Oracle Analytics Cloud
+        \item Incorta Platform: Incorta Analytics
+        \item Microsoft Tools: Power BI, Excel, Metabase
+    \end{itemize}
+    \item \textbf{Data Modeling:} ERwin
+    \item \textbf{Data Analysis:}
+    \begin{itemize}
+        \item Power Query and DAX
+        \item Python: Numpy, Pandas, Matplotlib, Seaborn
+    \end{itemize}
+    \item \textbf{Databases:} SQL Server, MySQL, Oracle
+    \item \textbf{Tools:} Git, Docker, Airflow, dbt, Informatica PowerCenter, Informatica DEI, ERwin, VS Code, SSMS, TOAD, MySQL Workbench, Jupyter Notebook, GitHub
+    \item \textbf{Banking Experience:}
+    \begin{itemize}
+        \item OFSAA Configuration
+        \item PFT Module: Cost Allocation Rules development and testing
+        \item FTP Module: Developing FTP Methods and handling IR Curves
+    \end{itemize}
+    \item \textbf{Project Management and Collaboration:}
+    \begin{itemize}
+        \item JIRA – Bug Reporting
+        \item Confluence – Document Management
+        \item Trello – Task Management
+    \end{itemize}
+    \item \textbf{Other:} Data Modeling, ETL, CI/CD, OLTP and DWH Concepts, OFSAA Data Model Exposure
 \end{itemize}
