Enahnced the experience

--- a/certifications.tex
+++ b/certifications.tex
@@ -6,16 +6,16 @@
     \item \textbf{AWS}
     \begin{itemize}[leftmargin=1.5em]
         % \item Solution Architect Associate -- On Going \hfill July 2025
-        \item Data Engineering Associate -- On Going \hfill Oct 2025
+        \item Data Engineering Associate -- On Going \hfill Dec 2025
     \end{itemize}
-    \item \textbf{Oracle - Certified:} \hfill May 2023 -- Aug 2023
-    \begin{itemize}[leftmargin=1.5em]
-        \item Oracle Cloud Infrastructure 2023 Certified Enterprise Analytics Professional.
-    \end{itemize}
-    \item \textbf{Incorta Training - Certified:} \hfill Jun 2023 -- May 2023
-    \begin{itemize}[leftmargin=1.5em]
-        \item Incorta 5 Foundations for Business Analysts.
-        \item Incorta 5 Foundations for Developers.
-        \item Incorta 5 Foundations for Administrator
-    \end{itemize}
+    % \item \textbf{Oracle - Certified:} \hfill May 2023 -- Aug 2023
+    % \begin{itemize}[leftmargin=1.5em]
+    %     \item Oracle Cloud Infrastructure 2023 Certified Enterprise Analytics Professional.
+    % \end{itemize}
+    % \item \textbf{Incorta Training - Certified:} \hfill Jun 2023 -- May 2023
+    % \begin{itemize}[leftmargin=1.5em]
+    %     \item Incorta 5 Foundations for Business Analysts.
+    %     \item Incorta 5 Foundations for Developers.
+    %     \item Incorta 5 Foundations for Administrator
+    % \end{itemize}
 \end{itemize}
