--- a/skills.tex
+++ b/skills.tex
@@ -1,6 +1,6 @@
 \begin{itemize}
     \item \textbf{Languages:} Python, SQL, Java, PL/SQL
-    \item \textbf{Big Data:} Apache Kafka, Spark, Hadoop
+    \item \textbf{Big Data:} Apache Kafka (Confluent Kafka, Redpanda), Spark, Hadoop
     \item \textbf{Cloud:}
     \begin{itemize}
         \item \textbf{AWS:}
@@ -10,6 +10,7 @@
             \item EMR
             \item Glue
             \item Lambda
+            \item Athena/PrestoDB
         \end{itemize}
         \item Familiarity with GCP and Azure
     \end{itemize}
