--- a/experience.tex
+++ b/experience.tex
@@ -10,7 +10,7 @@
     \item Developed a chat bot using Retrieval-Augmented Generation (RAG) technology to summarize design documents.
     \item Built and maintained python scripts to detect and suggest fixes for common Informatica DEI issues, reducing troubleshooting time by 30\%.
     \item Build and maintained python scripts to detect differences in database objects between different environments, reducing manual comparison time by 40\%.
-    \item Build and maintained python scripts to detect differences between ERwein data models and actual database schemas, reducing manual validation time by \50%.
+    \item Build and maintained python scripts to detect differences between ERwein data models and actual database schemas, reducing manual validation time by 50\%.
     \item Used Redpanda to create and manage Kafka topics for real-time data analytics and enhance final user experience.
     \item Collaborated with cross-functional teams to gather requirements, design solutions, and ensure successful.
     \item Used PrestoDB/AWS Athena to run interactive queries on large datasets stored in AWS S3 data lake and  the dataware house to support business intelligence and reporting needs.
