Fix: Fixed Typo

--- a/experience.tex
+++ b/experience.tex
@@ -4,19 +4,19 @@
     \item Developed and optimized ETL mappings, workflows, and applications in DEV, SIT, and UAT using Informatica DEI and Informatica Developer Tool.
     \item Integrated multiple data sources: MSSQL, Oracle, flat files, and Kafka streaming events.
     \item Contributed to High-Level and Low-Level Design (HLD/LLD) documentation.
-    \item Expermented with ELK stack to monitor and visualize ETL job performance and system health.
+    \item Experimented with ELK stack to monitor and visualize ETL job performance and system health.
     \item Actively worked within Agile frameworks using JIRA and Confluence, regularly reporting progress and closing tickets.
     \item Updated and maintained data models using ERwin Data Modeler to reflect business and technical changes.
     \item Developed a chat bot using Retrieval-Augmented Generation (RAG) technology to summarize design documents.
     \item Built and maintained python scripts to detect and suggest fixes for common Informatica DEI issues, reducing troubleshooting time by 30\%.
     \item Build and maintained python scripts to detect differences in database objects between different environments, reducing manual comparison time by 40\%.
-    \item Build and maintained python scripts to detect differences between ERwein data models and actual database schemas, reducing manual validation time by 50\%.
+    \item Build and maintained python scripts to detect differences between ERwin data models and actual database schemas, reducing manual validation time by 50\%.
     \item Used Redpanda to create and manage Kafka topics for real-time data analytics and enhance final user experience.
     \item Collaborated with cross-functional teams to gather requirements, design solutions, and ensure successful.
     \item Used PrestoDB/AWS Athena to run interactive queries on large datasets stored in AWS S3 data lake and  the dataware house to support business intelligence and reporting needs.
 \end{itemize}
 
-\textbf{Med-Levl Data Engineer} \hfill Credit Agricole Egypt, Cairo, Egypt \\
+\textbf{Mid-Levl Data Engineer} \hfill Credit Agricole Egypt, Cairo, Egypt \\
 \textit{December 2023 – December 2024}
 \begin{itemize}
     \item  Converted legacy PL/SQL procedures into Informatica PowerCenter mappings and workflows.
@@ -34,10 +34,10 @@
 environments.
 \end{itemize}
 
-\textbf{Jonir Data Engineer} \hfill Credit Agricole Egypt, Cairo, Egypt \\
+\textbf{Junior Data Engineer} \hfill Credit Agricole Egypt, Cairo, Egypt \\
 \textit{August 2021– June 2022}
 \begin{itemize}
-    \item Developed ETL pipelines using T2T and SCD tools in OFSAA\%
+    \item Developed ETL pipelines using T2T and SCD tools in OFSAA
     \item Built and optimized multiple ETL maps using Informatica PowerCenter to drive OFSAA data warehouse.
     \item Developed, Tested and integrated custom PL/SQL packages, procedures, functions, and triggers to support ETL processes.
     \item Optimized SQL queries and PL/SQL code to improve performance and reduce execution time.
