--- a/skills.tex
+++ b/skills.tex
@@ -1,54 +1,12 @@
-\begin{itemize}
-    \item \textbf{Languages:} Python, SQL, Java, PL/SQL
-    \item \textbf{Big Data:} Apache Kafka (Confluent Kafka, Redpanda), Spark, Hadoop
-    \item \textbf{Cloud:}
-    \begin{itemize}
-        \item \textbf{AWS:}
-        \begin{itemize}
-            \item S3
-            \item EC2
-            \item EMR
-            \item Glue
-            \item Lambda
-            \item Athena/PrestoDB
-        \end{itemize}
-        \item Familiarity with GCP and Azure
-    \end{itemize}
-    \item \textbf{ETL and Data Integration:}
-    \begin{itemize}
-        \item Informatica PowerCenter Designer and OFSAA Tool (T2T, SCD)
-        \item Informatica Developer Tool
-    \end{itemize}
-    \item \textbf{Task Scheduling Tools:}
-    \begin{itemize}
-        \item Informatica PowerCenter Workflow
-        \item Apache Airflow
-    \end{itemize}
-    \item \textbf{BI and Reporting:}
-    \begin{itemize}
-        \item Oracle Tools: OBIEE, Oracle BI Publisher, Oracle Analytics Cloud
-        \item Incorta Platform: Incorta Analytics
-        \item Microsoft Tools: Power BI, Excel, Metabase
-    \end{itemize}
-    \item \textbf{Data Modeling:} ERwin
-    \item \textbf{Data Analysis:}
-    \begin{itemize}
-        \item Power Query and DAX
-        \item Python: Numpy, Pandas, Matplotlib, Seaborn
-    \end{itemize}
-    \item \textbf{Databases:} SQL Server, MySQL, Oracle
-    \item \textbf{Tools:} Git, Docker, Airflow, dbt, Informatica PowerCenter, Informatica DEI, ERwin, VS Code, SSMS, TOAD, MySQL Workbench, Jupyter Notebook, GitHub
-    \item \textbf{Banking Experience:}
-    \begin{itemize}
-        \item OFSAA Configuration
-        \item PFT Module: Cost Allocation Rules development and testing
-        \item FTP Module: Developing FTP Methods and handling IR Curves
-    \end{itemize}
-    \item \textbf{Project Management and Collaboration:}
-    \begin{itemize}
-        \item JIRA – Bug Reporting
-        \item Confluence – Document Management
-        \item Trello – Task Management
-    \end{itemize}
-    \item \textbf{Other:} Data Modeling, ETL, CI/CD, OLTP and DWH Concepts, OFSAA Data Model Exposure
+\begin{itemize}[leftmargin=0.15in, label={}]
+    \small{\item{
+        \textbf{Languages}{: Python (NumPy, Pandas, Matplotlib), SQL (PL/SQL, T-SQL), Java.} \\
+        \textbf{Data Engineering \& Big Data}{: Apache Iceberg, Trino, Spark, Hadoop, Apache Kafka (Confluent, Redpanda), dbt, Airflow.} \\
+        \textbf{Cloud (AWS)}{: S3, EC2, EMR, Glue, Lambda, Athena/PrestoDB (Familiar with GCP, Azure).} \\
+        \textbf{ETL \& Data Integration}{: Informatica (PowerCenter, DEI, Developer), OFSAA (T2T, SCD).} \\
+        \textbf{Databases \& Modeling}{: SQL Server, MySQL, Oracle; ERwin Data Modeler, DWH Concepts, OLTP.} \\
+        \textbf{BI \& Data Analysis}{: Power BI (DAX, Power Query), Incorta, OBIEE, Metabase, Excel.} \\
+        \textbf{Banking \& FinTech}{: OFSAA Configuration, PFT (Cost Allocation), FTP (IR Curves/Methods).} \\
+        \textbf{Tools \& DevOps}{: Docker, Git/GitHub, CI/CD, JIRA, Confluence, VS Code, SSMS, Jupyter.}
+    }}
 \end{itemize}
