--- a/experience.tex
+++ b/experience.tex
@@ -1,23 +1,21 @@
-\textbf{Senior Data Engineer} \hfill Al-Rajhi Bank \{ARB\}, Riyadh, Saudi Arabia \\
-\textit{January 2025 – Present}
 \begin{itemize}
-    \item Developed and optimized ETL mappings, workflows, and applications in DEV, SIT, and UAT using Informatica DEI and Informatica Developer Tool.
-    \item Integrated multiple data sources: MSSQL, Oracle, flat files, and Kafka streaming events.
-    \item Contributed to High-Level and Low-Level Design (HLD/LLD) documentation.
-    \item Experimented with ELK stack to monitor and visualize ETL job performance and system health.
-    \item Actively worked within Agile frameworks using JIRA and Confluence, regularly reporting progress and closing tickets.
-    \item Updated and maintained data models using ERwin Data Modeler to reflect business and technical changes.
-    \item Developed a chat bot using Retrieval-Augmented Generation (RAG) technology to summarize design documents.
-    \item Built and maintained python scripts to detect and suggest fixes for common Informatica DEI issues, reducing troubleshooting time by 30\%.
-    \item Build and maintained python scripts to detect differences in database objects between different environments, reducing manual comparison time by 40\%.
-    \item Build and maintained python scripts to detect differences between ERwin data models and actual database schemas, reducing manual validation time by 50\%.
-    \item Used Redpanda to create and manage Kafka topics for real-time data analytics and enhance final user experience.
-    \item Collaborated with cross-functional teams to gather requirements, design solutions, and ensure successful.
-    \item Used PrestoDB/AWS Athena to run interactive queries on large datasets stored in AWS S3 data lake and  the dataware house to support business intelligence and reporting needs.
+\item \textbf{Senior Data Engineer} \hfill Al-Rajhi Bank \{ARB\}, Riyadh, Saudi Arabia (\textit{January 2025 – Present})
+\begin{itemize}
+    \item \textbf{Modern Data Stack PoC:} Spearheaded a Proof of Concept to modernize the data architecture using \textbf{Apache Airflow} for orchestration, \textbf{dbt} for transformations, and \textbf{Trino} as the query engine over an \textbf{Apache Iceberg} table format on S3-compatible storage (\textbf{MinIO} and \textbf{OCI Object Storage}).
+    \item Developed and optimized ETL mappings and workflows in DEV, SIT, and UAT environments using \textbf{Informatica DEI} and \textbf{Informatica Developer Tool}.
+    \item Implemented \textbf{stream-processing pipelines} using \textbf{Kafka/Redpanda}, applying \textbf{distributed systems} principles to ensure scalability, fault tolerance, and high availability.
+    \item \textbf{Automation \& Tooling:} Developed Python-based automation suites to:
+    \begin{itemize}
+        \item Detect and suggest fixes for Informatica DEI issues, reducing troubleshooting time by \textbf{30\%}.
+        \item Automate object comparisons between environments, reducing manual validation time by \textbf{40\%}.
+        \item Reconcile differences between \textbf{ERwin data models} and physical database schemas (50\% time savings).
+    \end{itemize}
+    \item Utilized \textbf{PrestoDB/AWS Athena} to execute interactive queries on large-scale datasets in \textbf{AWS S3 data lakes}, supporting critical BI and reporting requirements.
+    \item Modeled analytics datasets using \textbf{dimensional modeling} techniques (star and snowflake schemas) and contributed to the design of a centralized \textbf{semantic layer} serving as a single source of truth for \textbf{business metrics} across BI tools.
+    \item Collaborated in \textbf{Agile} squads using \textbf{JIRA and Confluence}, ensuring seamless requirement gathering and delivery of cross-functional solutions.
 \end{itemize}
 
-\textbf{Mid-Levl Data Engineer} \hfill Credit Agricole Egypt, Cairo, Egypt \\
-\textit{December 2023 – December 2024}
+\item \textbf{Mid-Levl Data Engineer} \hfill Credit Agricole Egypt, Cairo, Egypt (\textit{December 2023 – December 2024})
 \begin{itemize}
     \item  Converted legacy PL/SQL procedures into Informatica PowerCenter mappings and workflows.
     \item  Developed, and tested ETL mappings to consolidate financial data and enhance data accuracy.
@@ -25,20 +23,20 @@
     \item  Optimized SQL queries and PL/SQL code to improve performance and reduce execution
 \end{itemize}
 
-\textbf{Data Engineer} \hfill Banque Misr, Cairo, Egypt \\
-\textit{June 2022 – March 2023}
+\item \textbf{Data Engineer} \hfill Banque Misr, Cairo, Egypt ( \textit{June 2022 – March 2023})
 \begin{itemize}
-    \item Developed and tested OFSAA Funds Transfer Pricing \(FTP\) methods and cost allocation rules \(PFT\).
+    \item Developed and tested OFSAA Funds Transfer Pricing (FTP) methods and cost allocation rules (PFT).
     \item Developed, and tested ETL mappings to consolidate financial data and enhance data accuracy.
     \item Participated in SIT, UAT, and deployment phases to resolve issues and ensure data integrity across all ETL 
-environments.
+    environments.
 \end{itemize}
 
-\textbf{Junior Data Engineer} \hfill Credit Agricole Egypt, Cairo, Egypt \\
-\textit{August 2021– June 2022}
+\item \textbf{Junior Data Engineer} \hfill Credit Agricole Egypt, Cairo, Egypt (\textit{August 2021– June 2022})
 \begin{itemize}
     \item Developed ETL pipelines using T2T and SCD tools in OFSAA
     \item Built and optimized multiple ETL maps using Informatica PowerCenter to drive OFSAA data warehouse.
     \item Developed, Tested and integrated custom PL/SQL packages, procedures, functions, and triggers to support ETL processes.
-    \item Optimized SQL queries and PL/SQL code to improve performance and reduce execution time.
+    % \item Optimized SQL queries and PL/SQL code to improve performance and reduce execution time.
+\end{itemize}
+
 \end{itemize}
