--- a/preamble.tex
+++ b/preamble.tex
@@ -1,5 +1,4 @@
-\documentclass[a4paper,10pt]{article}
-\usepackage[utf8]{inputenc}
+\documentclass{article}
 \usepackage[T1]{fontenc}
 \usepackage{enumitem}
 \usepackage{geometry}
