Added Impact to Both Experience and summary (Except ARB)

--- a/experience.tex
+++ b/experience.tex
@@ -1,9 +1,11 @@
 \begin{itemize}
-\item \textbf{Senior Data Engineer} \hfill Al-Rajhi Bank \{ARB\}, Riyadh, Saudi Arabia (\textit{January 2025 – Present})
-\begin{itemize}
+    \item \textbf{Senior Data Engineer} \hfill Al-Rajhi Bank \{ARB\}, Riyadh, Saudi Arabia (\textit{January 2025 – Present})
+    \\ \textbf{Al-Rajhi Bank:} is one of the world’s largest Islamic banks, headquartered in Saudi Arabia and operating under Sharia-compliant principles.
+Beyond the Kingdom, it has an international presence with branches and subsidiaries in countries such as Kuwait, Jordan, and Malaysia.
+    \begin{itemize}
     \item \textbf{Modern Data Stack PoC:} Spearheaded a Proof of Concept to modernize the data architecture using \textbf{Apache Airflow} for orchestration, \textbf{dbt} for transformations, and \textbf{Trino} as the query engine over an \textbf{Apache Iceberg} table format on S3-compatible storage (\textbf{MinIO} and \textbf{OCI Object Storage}).
-    \item Developed and optimized ETL mappings and workflows in DEV, SIT, and UAT environments using \textbf{Informatica DEI} and \textbf{Informatica Developer Tool}.
-    \item Implemented \textbf{stream-processing pipelines} using \textbf{Kafka/Redpanda}, applying \textbf{distributed systems} principles to ensure scalability, fault tolerance, and high availability.
+    \item Developed and optimized ETL mappings and workflows in Development (DEV), System Integration Testing (SIT), and User Acceptance Testing (UAT) environments using \textbf{Informatica Data Engineering Integration (DEI)} and \textbf{Informatica Developer Tool}.
+    \item Implemented \textbf{stream-processing pipelines} using \textbf{Kafka/Redpanda}, enabling real-time data ingestion and processing for critical banking applications.
     \item \textbf{Automation \& Tooling:} Developed Python-based automation suites to:
     \begin{itemize}
         \item Detect and suggest fixes for Informatica DEI issues, reducing troubleshooting time by \textbf{30\%}.
@@ -16,27 +18,26 @@
 \end{itemize}
 
 \item \textbf{Mid-Levl Data Engineer} \hfill Credit Agricole Egypt, Cairo, Egypt (\textit{December 2023 – December 2024})
+\\ \textbf{Crédit Agricole Egypt} is a major Egyptian bank, the only French-linked bank in the country, serving retail, corporate, and investment clients through a wide branch network and a focus on digital services and financial expertise.
 \begin{itemize}
-    \item  Converted legacy PL/SQL procedures into Informatica PowerCenter mappings and workflows.
-    \item  Developed, and tested ETL mappings to consolidate financial data and enhance data accuracy.
-    \item  Participated in SIT, UAT, and deployment phases to resolve issues and ensure data integrity across all ETL environments.
-    \item  Optimized SQL queries and PL/SQL code to improve performance and reduce execution
+    \item \textbf{Financial Data Consalidation:} Developed and Maintained Cosalidation Table to consalidate financial data between the data warehouse and OFSAA financial application, ensure seemless synchronization between General Ledger (GL) and account balances
+    \item \textbf{Workflow Optimization:} Re-engineered Consalidation data processing workflows using \textbf{Informatica PowerCenter} by identifying and parallizing the execution of independant sessions, achieving a \textbf{83\% reduction} in processing time by reducing execution time from (6 Hours to 1 Hour) and significantly increasing data accuracy for financial reporting
+    \item \textbf{System Modernization} Orchestrated the migration of legacy PL/SQL packages into fully managed Informatica Mappings, centralizing data logic and improving system maintainability
 \end{itemize}
-
 \item \textbf{Data Engineer} \hfill Banque Misr, Cairo, Egypt ( \textit{June 2022 – March 2023})
+\\ \textbf{Banque Misr} is one of Egypt’s oldest and largest state-owned banks, founded in 1920, with an extensive domestic network, international branches in the UAE and France, and a wide portfolio of subsidiaries across banking, insurance, and financial services.
 \begin{itemize}
-    \item Developed and tested OFSAA Funds Transfer Pricing (FTP) methods and cost allocation rules (PFT).
-    \item Developed, and tested ETL mappings to consolidate financial data and enhance data accuracy.
-    \item Participated in SIT, UAT, and deployment phases to resolve issues and ensure data integrity across all ETL 
-    environments.
+    \item Partnered with business owners to analyze and maintain the current banking product hierarchy, aligning products with suitable Fund Transfer Pricing (FTP) methods to compute interest allocation and drive accurate profitability analysis.
+    \item Implemented and automated the refined product hierarchy and FTP mappings into the data pipelines and calculation layer where each product and product hierarchy level is assigned its corresponding FTP method to calculate the transfer rate per each product according to its hierarchy using Interest Rate Curves received from Central Bank of Egypt (CBE).
+    \item Collaborated with SIT and UAT teams to validate the implemented product hierarchy and FTP calculations, ensuring accuracy, consistency, and alignment with business expectations prior to production rollout.
+    
 \end{itemize}
 
 \item \textbf{Junior Data Engineer} \hfill Credit Agricole Egypt, Cairo, Egypt (\textit{August 2021– June 2022})
 \begin{itemize}
-    \item Developed ETL pipelines using T2T and SCD tools in OFSAA
-    \item Built and optimized multiple ETL maps using Informatica PowerCenter to drive OFSAA data warehouse.
-    \item Developed, Tested and integrated custom PL/SQL packages, procedures, functions, and triggers to support ETL processes.
-    % \item Optimized SQL queries and PL/SQL code to improve performance and reduce execution time.
+    \item Assisted in developing ETL mappings and workflows using \textbf{Informatica PowerCenter} to extract, transform, and load data from various sources into the data warehouse.
+    \item Participated in data validation and testing activities to ensure data accuracy and integrity.
+    \item Collaborated with senior engineers to troubleshoot and resolve ETL-related issues.
 \end{itemize}
 
 \end{itemize}
