--- a/summary.tex
+++ b/summary.tex
@@ -1,1 +1,1 @@
-Senior Data Engineer with 5+ years of experience designing, modernizing, and scaling data platforms in highly regulated financial environments. Proven track record of building cloud-based and open-source data infrastructures, including modern data stacks and analytics platforms, while ensuring data accuracy, reliability, and governance. Deep expertise in ELT/ETL pipelines, stream processing, and distributed data systems, with hands-on experience delivering semantic layers and analytics-ready data models that serve as a trusted source of business metrics. Known for reducing operational risk and manual effort through automation, and for bridging legacy enterprise systems with modern, scalable architectures.
+Senior Data Engineer specializing in building and modernizing data platforms under regulatory and financial constraints. Experienced in replacing legacy enterprise systems with scalable lakehouse architectures, enabling low-latency analytics, real-time ingestion, and governed data delivery. Known for owning critical pipelines where correctness, auditability, and deadlines are non-negotiable.
