Added some Proof of Impact to Summary, addded impact to some point in ARB and CAE

--- a/experience/ARB/Experiences/SeniorDataEngineer.tex
+++ b/experience/ARB/Experiences/SeniorDataEngineer.tex
@@ -1,21 +1,32 @@
 \item \textbf{Senior Data Engineer} \hfill Al-Rajhi Bank (ARB), Riyadh, Saudi Arabia (\textit{January 2025 – Present})
 \input{experience/ARB/OrganizasionIntroduction.tex}
 \begin{itemize}
-    \item \textbf{Modern Data Stack Proof of Concept (PoC):}
-    \begin{itemize}
-        \item \textbf{Architecture Modernization:} Spearheading a strategic migration from legacy Informatica and Oracle DB silos to a decoupled \textbf{Medallion Architecture}.
-        \item \textbf{Infrastructure Evolution:} Architected a storage-compute decoupling strategy using \textbf{Apache Iceberg} and \textbf{OCI S3-Compatible Object Storage}, projected to significantly reduce licensing overhead.
-        \item \textbf{Airflow-dbt Implementation:} Replaced rigid legacy mappings with \textbf{Apache Airflow} and \textbf{dbt} for 5+ critical workflows, enhancing version control and developer velocity.
-        \item \textbf{High-Performance Analytics:} Integrated \textbf{Trino} as the primary query engine to facilitate low-latency interactive analytics over Iceberg tables for enterprise BI tools.
-    \end{itemize}
-
-    \item \textbf{SIMAH Reporting}
-    \begin{itemize}
-        \item \textbf{Regulatory Compliance:} Engineered end-to-end data pipelines to aggregate and transform credit risk data for submission to \textbf{SIMAH}, Saudi Arabia's leading credit bureau.
-        \item \textbf{Performance Optimization:} Optimized ETL workflows to reduce data processing time by \textbf{30\%}, ensuring timely report generation ahead of regulatory deadlines.
-    \end{itemize}
+    % \item \textbf{Modern Data Stack Proof of Concept (PoC):}
+    % \begin{itemize}
+    %     \item \textbf{Platform Migration:} Leading the transition from legacy Informatica and Oracle DB silos to a decoupled \textbf{Medallion Architecture} (Bronze/Silver/Gold). This ensures high-quality data delivery for financial analytics while removing technical debt from rigid legacy systems.
+    %     \item \textbf{Infrastructure Design:} Designed a storage-compute decoupling strategy using \textbf{Apache Iceberg} and \textbf{OCI Object Storage} an \textbf{S3 Compatable Storage}. 
+    %     \begin{verse}
+    %         \textbf{Business Impact} Projected a significant decrease in annual licensing and maintenance costs by moving from proprietary tools to an open lakehouse architecture.
+    %     \end{verse}
+    %     \item \textbf{Airflow-dbt Implementation:} Replaced rigid legacy mappings with \textbf{Apache Airflow} and \textbf{dbt} for 5+ critical workflows, enhancing version control and developer velocity.
+    %     \item \textbf{High-Performance Analytics:} Integrated \textbf{Trino} as the primary query engine to facilitate low-latency interactive analytics over Iceberg tables for enterprise BI tools.
+    % \end{itemize}
+    \item Leading the transition from legacy Informatica and Oracle DB silos to a decoupled \textbf{Medallion Architecture (Bronze/Silver/Gold)} to ensure high-quality, governed data delivery for financial analytics.
+    \item Designed a storage-compute decoupling strategy using \textbf{Apache Iceberg} and \textbf{OCI Object Storage (S3 Compatable Storage)} to reduce licensing overhead and enable independent scaling based on demand.
+    \item Implemented \textbf{Apache Airflow} and \textbf{dbt} for 5+ critical workflows, replacing rigid legacy mappings and increasing pipeline observability
+    \begin{verse}
+        \textbf{Business Impact} Projected a significant decrease in annual licensing and maintenance costs by moving from proprietary tools to an open lakehouse architecture, allowing the bank to handle increasing volumes without linear cost increases.
+    \end{verse}
+    \item Integrated \textbf{Trino} as the primary query engine to facilitate low-latency interactive analytics over Iceberg tables for enterprise BI tools, improving report generation times by up to 70\%.
+    \begin{verse}
+    \textbf{Business Impact} Created a cost-effective growth model by decoupling storage from compute, allowing the bank to handle increasing volumes without linear cost increases.
+    \end{verse}
+    \item Developed ETL workflows within the existing Informatica DEI architecture to handle Saudi Credit Bureau (SIMAH) reporting.
+    \begin{verse}
+    \textbf{Business Impact} Ensured regulatory compliance by delivering accurate and timely credit reports, avoiding potential fines and enhancing the bank's reputation with regulators.
+    \end{verse}
     \item Designed and deployed \textbf{real-time} data ingestion pipelines using \textbf{Apache Kafka, Kafka Connect, Kafka Streams and kSQL} to stream data from core banking, microservices and CRM systems into the data lake, defining data contracts and transformation logic to ensure data quality, scalability, and reliable downstream analytics.
-    \item Engineered \textbf{Python}-based automation tools to streamline \textbf{Informatica DEI} troubleshooting and schema reconciliation between \textbf{ERwin} models and physical databases, reducing manual validation and alignment effort by up to 60\% and improving platform reliability.
+    \item Developed \textbf{Python}-based automation tools to streamline \textbf{Informatica DEI} troubleshooting and schema reconciliation between \textbf{ERwin} models and physical databases, reducing manual validation and alignment effort by up to 60\% and improving platform reliability.
     \item Led System Integration Testing (SIT) and User Acceptance Testing (UAT) for critical data pipelines and BI reports, coordinating across engineering, QA, and business stakeholders to validate correctness, performance, and regulatory compliance. Implemented monitoring and structured feedback loops during testing phases, resolving 95\% of issues prior to production and ensuring stable post-deployment operations.
 
     % \item \textbf{Data Engineering Operations \& Automation:}
