--- a/experience/CAE/Experiences/MedLevelDataEngineering.tex
+++ b/experience/CAE/Experiences/MedLevelDataEngineering.tex
@@ -1,7 +1,11 @@
-\item \textbf{Mid-Levl Data Engineer} \hfill Credit Agricole Egypt, Cairo, Egypt (\textit{December 2023 – December 2024})
+\item \textbf{Data Engineer} \hfill Credit Agricole Egypt, Cairo, Egypt (\textit{December 2023 – December 2024})
 \input{experience/CAE/OrganizasionIntroduction.tex}
 \begin{itemize}
-    \item \textbf{Financial Data Consalidation:} Developed and Maintained Cosalidation Table to consalidate financial data between the data warehouse and OFSAA financial application, ensure seemless synchronization between General Ledger (GL) and account balances
-    \item \textbf{Workflow Optimization:} Re-engineered Consalidation data processing workflows using \textbf{Informatica PowerCenter} by identifying and parallizing the execution of independant sessions, achieving a \textbf{83\% reduction} in processing time by reducing execution time from (6 Hours to 1 Hour) and significantly increasing data accuracy for financial reporting
-    \item \textbf{System Modernization} Orchestrated the migration of legacy PL/SQL packages into fully managed Informatica Mappings, centralizing data logic and improving system maintainability
+    \item Optimized existing data integration pipelines, focusing on performance tuning and resource management within a high-stakes banking environment.
+    \item Achieved an \textbf{83\%} reduction in processing time for key financial data pipelines through targeted SQL and ETL optimization.
+    \item Managed end-to-end ETL lifecycles for core banking data, ensuring high availability and accuracy for downstream profitability and risk analysis.
+    \item Delivered a \textbf{30\%} improvement in overall ETL performance by redesigning bottlenecked data transformation layers.
+    \begin{verse}
+    \textbf{Business Impact} Enhanced the speed of internal financial reporting, enabling faster month-end closing processes.
+    \end{verse}
 \end{itemize}
