--- a/experience/experience.tex
+++ b/experience/experience.tex
@@ -1,6 +1,12 @@
 \begin{itemize}
+    \item Ejada Systems Ltd \hfill \(July 2021 - present\)
+    \begin{verse}
+        A leading Information Technology (IT) services provider headquartered in Saudi Arabia, empowers organizations across the Middle East and Africa (MENA). Adham was responsible for supporting the following Ejada Customers
+    \end{verse}
+    \begin{itemize}
 \input{experience/ARB/Experiences/SeniorDataEngineer.tex}
 \input{experience/CAE/Experiences/MedLevelDataEngineering.tex}
 \input{experience/BM/Experiences/DataEngineer.tex}
 \input{experience/CAE/Experiences/JuniorDataEngineering.tex}
+\end{itemize}
 \end{itemize}
