--- a/summary.tex
+++ b/summary.tex
@@ -1,1 +1,12 @@
-Senior Data Engineer specializing in building and modernizing data platforms under regulatory and financial constraints. Experienced in replacing legacy enterprise systems with scalable lakehouse architectures, enabling low-latency analytics, real-time ingestion, and governed data delivery. Known for owning critical pipelines where correctness, auditability, and deadlines are non-negotiable.
+Senior Data Engineer specializing in building and modernizing data platforms under regulatory and financial constraints.Known for owning critical pipelines where correctness, auditability, and deadlines are non-negotiable.
+\begin{itemize}
+    \item Experienced in replacing legacy enterprise systems with scalable lakehouse architectures
+    \item enabling low-latency analytics, real-time ingestion, and governed data delivery.
+\end{itemize}
+
+\subsection{Proof of Impact}
+\begin{itemize}
+    \item Led the migration from a legacy data warehouse to a modern lakehouse architecture, resulting in a 40\% reduction in data processing time and a 25\% decrease in operational costs in addition to eliminating vendor lock-in.
+    \item Designed and implemented a real-time data ingestion pipeline that improved data freshness by 60\%, enabling faster decision-making for business stakeholders.
+    \item Designed real-time integration between multiple systems reducing the number of API calls by 70\% and improving system reliability.    
+\end{itemize}
