modified the summary

--- a/summary.tex
+++ b/summary.tex
@@ -1,15 +1,17 @@
-Senior Data Engineer with 5+ years of experience building cloud-native data platforms and data products supporting analytics, reporting, and product decision-making. Specialized in scalable ELT pipelines, semantic data modeling, real-time ingestion, and enabling self-serve analytics in high-growth fintech and regulated banking environments.Experienced in replacing legacy enterprise systems with scalable lakehouse architectures.Experienced in replacing legacy enterprise systems with scalable lakehouse architectures
+Senior Data Engineer with 5+ years of experience building cloud-native data platforms and data products supporting analytics, reporting, and product decision-making. Specialized in scalable ELT pipelines, semantic data modeling, real-time ingestion, and enabling self-serve analytics in high-growth fintech and regulated banking environments.Experienced in replacing legacy enterprise systems with scalable lakehouse architectures.
 \begin{verse}
 \begin{itemize}
     \item Led the migration from a legacy data warehouse to a modern cloud-native lakehouse, enabling analytics engineering workflows, faster experimentation, and consistent metric definitions across product and business teams.
+    \item Optimized existing data integration pipelines, focusing on performance tuning and resource management within a high-stakes banking environment.
 \end{itemize}
 \end{verse}
 \begin{verse}
-    
     \subsection{Proof of Impact}
     \begin{itemize}
         \item Designed and implemented a real-time data ingestion pipeline that improved data freshness by 60\%, enabling faster decision-making for business stakeholders.
         \item Designed real-time integration between multiple systems reducing the number of API calls by 70\% and improving system reliability.    
+        \item Achieved an \textbf{83\%} reduction in processing time for key financial data pipelines through targeted SQL
+and ETL optimization.
     \end{itemize}
     \subsection{Business outcomes delivered}
     \begin{itemize}
