--- a/experience/experience.tex
+++ b/experience/experience.tex
@@ -1,7 +1,7 @@
 \begin{itemize}
     \item Ejada Systems Ltd \hfill \(July 2021 - present\)
     \begin{verse}
-        A leading Information Technology (IT) services provider headquartered in Saudi Arabia, empowers organizations across the Middle East and Africa (MENA). Adham was responsible for supporting the following Ejada Customers
+        A leading Information Technology (IT) services provider headquartered in Saudi Arabia, empowers organizations across the Middle East and Africa (MENA).
     \end{verse}
     \begin{itemize}
 \input{experience/ARB/Experiences/SeniorDataEngineer.tex}
