--- a/header.tex
+++ b/header.tex
@@ -1,7 +1,6 @@
 \begin{center}
-    {\LARGE \textbf{Adham Nour El-Waffaa Mohammed}} \\
+    {\LARGE \textbf{Adham Nour El-Waffaa}} \\
     \vspace{2pt}
-    adhamnourelwaffaa@gmail.com \,|\, +201001516725 / +966509805854 \,|\, LinkedIn: linkedin.com/in/adham-nour-el-waffaa-mohammed 
-    
+    adhamnourelwaffaa@gmail.com \\ +201001516725 / +966509805854  \\www.linkedin.com/in/adham-nour-elwaffaa    
 \end{center}
 \vspace{0.2cm}
