--- a/skills.tex
+++ b/skills.tex
@@ -4,7 +4,7 @@
         \textbf{Data Engineering \& Big Data}{: Apache Iceberg, Trino,semantic layer, Analytics Engineering  ,Spark, Hadoop, Apache Kafka (Confluent, Redpanda), dbt, Airflow,Python, Java ,SQL.} \\
         \textbf{Cloud (AWS)}{: S3, EC2, EMR, Glue, Lambda, Athena/PrestoDB (Familiar with GCP, Azureand OCI)} \\
         \textbf{ETL \& Data Integration}{: Informatica (PowerCenter, DEI, Developer), OFSAA (T2T, SCD)} \\
-        \textbf{Databases \& Modeling}{: SQL Server, MySQL, Oracle; ERwin Data Modeler, DWH Concepts, OLTP, OLAP, Dimensional Modeling (Star Schema, Fct And Dimensional Tables), ETL Piplines, Data Products} \\
+        \textbf{Databases \& Modeling}{: SQL Server, MySQL, Oracle; ERwin Data Modeler, OLTP, OLAP, Dimensional Modeling (Star Schema, Snowflake Schema),Data Vault 2.0 Modeling, ETL Piplines, Data Products} \\
         \textbf{BI \& Data Analysis}{: Power BI (DAX, Power Query), Incorta, OBIEE, Metabase, Excel.} \\
         \textbf{Tools \& DevOps}{: Docker, Git/GitHub, CI/CD, JIRA, Confluence, VS Code, SSMS, Jupyter.,Kubernetes (Basic / Working Knowledge)}
     }}
